--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ section{
     border: none;
     font-size: 18px;
     font-weight: 600;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+}
+.primary_btn:hover{
+    background-color: #5490F5;
+    transition: 0.4s;
 }
 .section_tilte{
     color: #0E0E0E;
@@ -45,6 +50,9 @@ section{
     line-height: 24px;
     margin-bottom: 32px;
 }
+.text-center{
+    text-align: center;
+}
 
 
 /* bannar Style */
@@ -55,7 +63,7 @@ section{
     padding: 80px 100px;
     gap: 64px;
     border-radius: 24px;
-    height: 560px;
+  
 
 }
 .bannar_contant h4{
@@ -79,17 +87,55 @@ section{
     border-radius: 16px;
     
 }
+.card_1:hover{
+    background-color: #5490F5;
+    color: #ffffff;
+    cursor: pointer;
+    transition: 0.7s;
+    
+}
+.card_1:hover h5{
+    color: #fff;
+}
+.card_1:hover p{
+    color: #fff;
+}
 .card_2{
     background-color: #C6E4D6;
     padding:32px;
     border-radius: 16px;
     
 }
+.card_2:hover{
+    background-color: #09A15C;
+    color: #ffffff;
+    cursor: pointer;
+    transition: 0.7s;
+    
+}
+.card_2:hover h5{
+    color: #fff;
+}
+.card_2:hover p{
+    color: #fff;
+}
 .card_3{
     background-color: #F7EBCF;
     padding:32px;
     border-radius: 16px;
+}
+.card_3:hover{
+    background-color: #FFC239;
+    color: #ffffff;
+    cursor: pointer;
+    transition: 0.7s;
     
+}
+.card_3:hover h5{
+    color: #fff;
+}
+.card_3:hover p{
+    color: #fff;
 }
 .all_card img{
     width: 62px;
@@ -110,16 +156,18 @@ section{
     padding: 11px 20px;
     border-radius: 8px;
     color: #ffffff;
-    background-color: #5490F5;
+    background-color: #3a65b0;
     border: none;
     font-size: 16px;
     font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
 }
 .card_2 >.card_btn{
-    background-color: #09A15C;
+    background-color: #43cb8e;
 }
 .card_3 > .card_btn{
-    background-color: #FFC239;
+    background-color: #cba13d;
 }
 
 /* President Section */
@@ -201,4 +249,123 @@ section{
     color: #ffffff;
     border-radius: 8px;
     border: none;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+}
+.news_btn:hover{
+    background-color: #5490F5;
+    transition: 0.4s;
+}
+/* Donate Style */
+.donate_taka{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 32px;
+
+}
+.donate_taka p:hover{
+    background-color: rgba(198, 228, 214, 1);
+    transition: 0.4s;
+}
+.donate_taka p{
+    padding: 40px;
+    font-size: 40px;
+    font-weight: bold;
+    border-radius: 16px;
+    background-color: #ffffff;
+    color: rgba(14, 14, 14, 0.8);
+    box-shadow: 0px 4px 4px 0 rgba(14, 14, 14, 0.15);
+}
+.donate_taka > .select_donate{
+    background-color: rgba(198, 228, 214, 1);
+}
+.donate_input{
+   
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 32px;
+    
+}
+.donate_input input[type="text"]{
+    padding: 20px 40px;
+    width: 100%;
+    border: none;
+    color: rgba(14, 14, 14, 0.3);
+    font-size: 20px;
+    text-align: center;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.donate > .donate_btn{
+   text-align: center;
+   
+}
+
+/* Footer Style */
+footer{
+    max-width: 1280px;
+    background-color: #C6E4D6;
+    margin-bottom: 50px;
+    border-radius: 24px;
+}
+.footer_title{
+    font-size: 40px;
+    font-weight: bold;
+    color: 0E0E0E;
+}
+.footer_decription{
+    width: 622px;
+    margin:24px auto;
+
+}
+.subscribe{
+    
+}
+.subscribe input[type="text"]{
+    padding: 20px 40px;
+    border: none;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+   
+}
+.footer_contain{
+    padding: 80px 265px;
+}
+.subscribe{
+    display: flex;
+}
+.subscribe > .subscibe_input{
+    width: 100%;
+}
+.subscibe_btn{
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    background-color: #006A50;
+    padding: 17px 34px;
+    color: white;
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.subscibe_btn:hover{
+    background-color: #5490F5;
+    transition: 0.4s;
+}
+
+/* bottom footer */
+.bottom_footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.bottom_footer h2{
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 30px;
+   
+}
+.bottom_footer img{
+    padding: 15px;
 }
